<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HS</string>
    <string name="title_activity_hs">HSActivity</string>
    <string name="title_provider">Provider</string>
    <string name="title_consumer">Consumer</string>


    <!-- WIFI -->
    <!-- Toast message when Wi-Fi cannot scan for networks -->
    <string name="wifi_fail_to_scan">Can\'t scan for networks</string>
    <!-- Toast message when Wi-Fi or bluetooth is disallowed in airplane mode -->
    <string name="wifi_in_airplane_mode">In Airplane mode</string>
    <!-- Summary text when Wi-Fi or bluetooth has error -->
    <string name="wifi_error">Error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Permissions    -->
    <string name="permission_rationale"><xliff:g id="permission">%1$s</xliff:g> permission is required for work well this app.</string>
    <string name="permission_denied">This App requires <xliff:g id="permission">%1$s</xliff:g> permission. Please try again and grant access to use the <xliff:g id="permission">%2$s</xliff:g>, it can be enabled from the System Settings &gt; Apps &gt;.</string>
    <string name="permission_required_toast">Permission is required for this app.</string>


    <!-- Consumer option menu -->
    <string name="user_map">AP User viewer</string>
    
    <!-- povider fragment -->
    <string name="provider_ap_settings">AP Settings</string>
    <string name="provider_data_per">제공 주기</string>
    <string-array name="select_date">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="data_per_term">
        <item>100</item>
        <item>500</item>
        <item>1024</item>
        <item>2048</item>
    </string-array>

    <string name="provider_remain_data">남은 데이터</string>
    <string name="provider_offered_data">제공한 데이터</string>
    <string name="provider_total_offered_title">총 제공 데이터</string>
</resources>
