<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.kingsman.hs.ProviderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:textSize="18dp"
            android:text="@string/title_provider"
            android:background="#87d9a2"/>
        <Button
            android:id="@+id/ap_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_ap_settings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:textSize="15dp"/>
<!--            android:text="@string/title_provider
            android:background="#c7e9d2"/>"-->
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:spinnerMode="dropdown"
            android:entries="@array/select_date"
            style="@android:style/Widget.Holo.Light.Spinner">
        </android.support.v7.widget.AppCompatSpinner>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_data_per_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:spinnerMode="dropdown"
            android:entries="@array/data_per_term"
            style="@android:style/Widget.Holo.Light.Spinner">
        </android.support.v7.widget.AppCompatSpinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/provider_offered_data"
                android:paddingStart="10dp"/>
            <TextView
                android:id="@+id/provider_offered_data_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="0.0MB"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/provider_remain_data"
                android:layout_weight="2"
                android:paddingStart="10dp"/>
            <TextView
                android:id="@+id/provider_remain_data_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="0.0MB"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/provider_total_offered_title"
                android:layout_weight="2"
                android:paddingStart="10dp"/>
            <TextView
                android:id="@+id/provider_total_offered_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="0.0MB"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
